--- a/.github/workflows/docker-nightly.yml
+++ b/.github/workflows/docker-nightly.yml
@@ -16,24 +16,32 @@ env:
   DOCKER_USERNAME: ${{ github.actor }}
 
 jobs:
-  build:
-    name: build and push
+  build-binaries:
+    name: build ${{ matrix.variant.name }} (${{ matrix.arch }})
     runs-on: ubuntu-24.04
-    permissions:
-      packages: write
-      contents: read
     strategy:
       fail-fast: false
       matrix:
-        build:
-          - name: 'Build and push the nightly reth image'
-            command: 'make PROFILE=maxperf docker-build-push-nightly'
-          - name: 'Build and push the nightly profiling reth image'
-            command: 'make PROFILE=profiling docker-build-push-nightly-profiling'
-          - name: 'Build and push the nightly op-reth image'
-            command: 'make IMAGE_NAME=$OP_IMAGE_NAME DOCKER_IMAGE_NAME=$OP_DOCKER_IMAGE_NAME PROFILE=maxperf op-docker-build-push-nightly'
-          - name: 'Build and push the nightly profiling op-reth image'
-            command: 'make IMAGE_NAME=$OP_IMAGE_NAME DOCKER_IMAGE_NAME=$OP_DOCKER_IMAGE_NAME PROFILE=profiling op-docker-build-push-nightly-profiling'
+        arch:
+          - x86_64-unknown-linux-gnu
+          - aarch64-unknown-linux-gnu
+        variant:
+          - name: "reth-maxperf"
+            binary: "reth"
+            profile: "maxperf"
+            build_target: "build"
+          - name: "reth-profiling"
+            binary: "reth"
+            profile: "profiling"
+            build_target: "build"
+          - name: "op-reth-maxperf"
+            binary: "op-reth"
+            profile: "maxperf"
+            build_target: "op-build"
+          - name: "op-reth-profiling"
+            binary: "op-reth"
+            profile: "profiling"
+            build_target: "op-build"
     steps:
       - uses: actions/checkout@v6
       - name: Remove bloatware
@@ -46,10 +54,69 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
-      - name: Install cross main
-        id: cross_main
+      - name: Install cross
         run: |
           cargo install cross --git https://github.com/cross-rs/cross
+      - name: Build ${{ matrix.variant.binary }} for ${{ matrix.arch }}
+        run: |
+          make ${{ matrix.variant.build_target }}-${{ matrix.arch }} PROFILE=${{ matrix.variant.profile }}
+        env:
+          JEMALLOC_SYS_WITH_LG_PAGE: ${{ matrix.arch == 'aarch64-unknown-linux-gnu' && '16' || '' }}
+      - name: Prepare binary for upload
+        run: |
+          mkdir -p dist/bin/${{ matrix.arch == 'x86_64-unknown-linux-gnu' && 'amd64' || 'arm64' }}
+          cp target/${{ matrix.arch }}/${{ matrix.variant.profile }}/${{ matrix.variant.binary }} \
+             dist/bin/${{ matrix.arch == 'x86_64-unknown-linux-gnu' && 'amd64' || 'arm64' }}/${{ matrix.variant.binary }}
+      - name: Upload binary artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.variant.name }}-${{ matrix.arch }}
+          path: dist/bin/
+          retention-days: 1
+
+  docker-push:
+    name: push ${{ matrix.variant.name }}
+    needs: build-binaries
+    runs-on: ubuntu-24.04
+    permissions:
+      packages: write
+      contents: read
+    strategy:
+      fail-fast: false
+      matrix:
+        variant:
+          - name: "reth-maxperf"
+            binary: "reth"
+            docker_image: "ghcr.io/${{ github.repository_owner }}/reth"
+            dockerfile: "Dockerfile.cross"
+            tags: "nightly"
+          - name: "reth-profiling"
+            binary: "reth"
+            docker_image: "ghcr.io/${{ github.repository_owner }}/reth"
+            dockerfile: "Dockerfile.cross"
+            tags: "nightly-profiling"
+          - name: "op-reth-maxperf"
+            binary: "op-reth"
+            docker_image: "ghcr.io/${{ github.repository_owner }}/op-reth"
+            dockerfile: "DockerfileOp.cross"
+            tags: "nightly"
+          - name: "op-reth-profiling"
+            binary: "op-reth"
+            docker_image: "ghcr.io/${{ github.repository_owner }}/op-reth"
+            dockerfile: "DockerfileOp.cross"
+            tags: "nightly-profiling"
+    steps:
+      - uses: actions/checkout@v6
+      - name: Download x86_64 binary
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ matrix.variant.name }}-x86_64-unknown-linux-gnu
+          path: dist/bin/
+      - name: Download aarch64 binary
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ matrix.variant.name }}-aarch64-unknown-linux-gnu
+          path: dist/bin/
       - name: Log in to Docker
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io --username ${DOCKER_USERNAME} --password-stdin
@@ -57,5 +124,10 @@ jobs:
         run: |
           docker run --privileged --rm tonistiigi/binfmt --install arm64,amd64
           docker buildx create --use --name cross-builder
-      - name: Build and push ${{ matrix.build.name }}
-        run: ${{ matrix.build.command }}
+      - name: Build and push multi-arch Docker image
+        run: |
+          docker buildx build --file ./${{ matrix.variant.dockerfile }} . \
+            --platform linux/amd64,linux/arm64 \
+            --tag ${{ matrix.variant.docker_image }}:${{ matrix.variant.tags }} \
+            --provenance=false \
+            --push
