--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,21 +16,24 @@ env:
   DOCKER_USERNAME: ${{ github.actor }}
 
 jobs:
-  build-rc:
-    if: contains(github.ref, '-rc')
-    name: build and push as release candidate
+  build-binaries:
+    name: build ${{ matrix.variant.name }} (${{ matrix.arch }})
     runs-on: ubuntu-24.04
-    permissions:
-      packages: write
-      contents: read
     strategy:
       fail-fast: false
       matrix:
-        build:
-          - name: "Build and push reth image"
-            command: "make IMAGE_NAME=$IMAGE_NAME DOCKER_IMAGE_NAME=$DOCKER_IMAGE_NAME PROFILE=maxperf docker-build-push"
-          - name: "Build and push op-reth image"
-            command: "make IMAGE_NAME=$OP_IMAGE_NAME DOCKER_IMAGE_NAME=$OP_DOCKER_IMAGE_NAME PROFILE=maxperf op-docker-build-push"
+        arch:
+          - x86_64-unknown-linux-gnu
+          - aarch64-unknown-linux-gnu
+        variant:
+          - name: "reth"
+            binary: "reth"
+            profile: "maxperf"
+            build_target: "build"
+          - name: "op-reth"
+            binary: "op-reth"
+            profile: "maxperf"
+            build_target: "op-build"
     steps:
       - uses: actions/checkout@v6
       - uses: rui314/setup-mold@v1
@@ -38,23 +41,29 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
-      - name: Install cross main
-        id: cross_main
+      - name: Install cross
         run: |
           cargo install cross --git https://github.com/cross-rs/cross
-      - name: Log in to Docker
+      - name: Build ${{ matrix.variant.binary }} for ${{ matrix.arch }}
         run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io --username ${DOCKER_USERNAME} --password-stdin
-      - name: Set up Docker builder
+          make ${{ matrix.variant.build_target }}-${{ matrix.arch }} PROFILE=${{ matrix.variant.profile }}
+        env:
+          JEMALLOC_SYS_WITH_LG_PAGE: ${{ matrix.arch == 'aarch64-unknown-linux-gnu' && '16' || '' }}
+      - name: Prepare binary for upload
         run: |
-          docker run --privileged --rm tonistiigi/binfmt --install arm64,amd64
-          docker buildx create --use --name cross-builder
-      - name: Build and push ${{ matrix.build.name }}
-        run: ${{ matrix.build.command }}
+          mkdir -p dist/bin/${{ matrix.arch == 'x86_64-unknown-linux-gnu' && 'amd64' || 'arm64' }}
+          cp target/${{ matrix.arch }}/${{ matrix.variant.profile }}/${{ matrix.variant.binary }} \
+             dist/bin/${{ matrix.arch == 'x86_64-unknown-linux-gnu' && 'amd64' || 'arm64' }}/${{ matrix.variant.binary }}
+      - name: Upload binary artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.variant.name }}-${{ matrix.arch }}
+          path: dist/bin/
+          retention-days: 1
 
-  build:
-    if: ${{ !contains(github.ref, '-rc') }}
-    name: build and push as latest
+  docker-push:
+    name: push ${{ matrix.variant.name }}
+    needs: build-binaries
     runs-on: ubuntu-24.04
     permissions:
       packages: write
@@ -62,22 +71,27 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build:
-          - name: "Build and push reth image"
-            command: "make IMAGE_NAME=$IMAGE_NAME DOCKER_IMAGE_NAME=$DOCKER_IMAGE_NAME PROFILE=maxperf docker-build-push-latest"
-          - name: "Build and push op-reth image"
-            command: "make IMAGE_NAME=$OP_IMAGE_NAME DOCKER_IMAGE_NAME=$OP_DOCKER_IMAGE_NAME PROFILE=maxperf op-docker-build-push-latest"
+        variant:
+          - name: "reth"
+            binary: "reth"
+            docker_image: "ghcr.io/${{ github.repository_owner }}/reth"
+            dockerfile: "Dockerfile.cross"
+          - name: "op-reth"
+            binary: "op-reth"
+            docker_image: "ghcr.io/${{ github.repository_owner }}/op-reth"
+            dockerfile: "DockerfileOp.cross"
     steps:
       - uses: actions/checkout@v6
-      - uses: rui314/setup-mold@v1
-      - uses: dtolnay/rust-toolchain@stable
-      - uses: Swatinem/rust-cache@v2
+      - name: Download x86_64 binary
+        uses: actions/download-artifact@v4
         with:
-          cache-on-failure: true
-      - name: Install cross main
-        id: cross_main
-        run: |
-          cargo install cross --git https://github.com/cross-rs/cross
+          name: ${{ matrix.variant.name }}-x86_64-unknown-linux-gnu
+          path: dist/bin/
+      - name: Download aarch64 binary
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ matrix.variant.name }}-aarch64-unknown-linux-gnu
+          path: dist/bin/
       - name: Log in to Docker
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io --username ${DOCKER_USERNAME} --password-stdin
@@ -85,5 +99,24 @@ jobs:
         run: |
           docker run --privileged --rm tonistiigi/binfmt --install arm64,amd64
           docker buildx create --use --name cross-builder
-      - name: Build and push ${{ matrix.build.name }}
-        run: ${{ matrix.build.command }}
+      - name: Extract tag
+        id: extract_tag
+        run: |
+          TAG=${GITHUB_REF#refs/tags/}
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
+          if [[ "$TAG" == *"-rc"* ]]; then
+            echo "is_rc=true" >> $GITHUB_OUTPUT
+          else
+            echo "is_rc=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Build and push multi-arch Docker image
+        run: |
+          TAGS="--tag ${{ matrix.variant.docker_image }}:${{ steps.extract_tag.outputs.tag }}"
+          if [[ "${{ steps.extract_tag.outputs.is_rc }}" == "false" ]]; then
+            TAGS="$TAGS --tag ${{ matrix.variant.docker_image }}:latest"
+          fi
+          docker buildx build --file ./${{ matrix.variant.dockerfile }} . \
+            --platform linux/amd64,linux/arm64 \
+            $TAGS \
+            --provenance=false \
+            --push
