--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -75,6 +75,7 @@ tokio = { workspace = true, features = ["sync", "macros", "time", "rt-multi-thre
 aquamarine.workspace = true
 clap = { workspace = true, features = ["derive", "env"] }
 eyre.workspace = true
+alloy-eip7928.workspace = true
 
 [dev-dependencies]
 backon.workspace = true
