feat: bump alloy-evm

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -739,7 +739,10 @@ vergen-git2 = "1.0.5"
 # networking
 ipnet = "2.11"
 
-# [patch.crates-io]
+[patch.crates-io]
+alloy-evm = { git = "https://github.com/alloy-rs/evm", rev = "a7da37d" }
+alloy-op-evm = { git = "https://github.com/alloy-rs/evm", rev = "a7da37d" }
+
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
