feat: add keccak-cache feature flag and per-ref features to bench-compare
This commit adds:
1. keccak-cache feature flag support for mainnet reth binary, propagated through:
   - bin/reth/Cargo.toml
   - crates/ethereum/cli/Cargo.toml
   - crates/ethereum/node/Cargo.toml
   - crates/node/metrics/Cargo.toml

2. Enhanced reth-bench-compare with per-reference feature support:
   - --baseline-features: specify features for baseline build only
   - --feature-features: specify features for feature build only
   - Existing --features flag still works as default for both

3. Patches Cargo.toml to use local alloy-core fork with keccak-cache feature

This enables A/B testing reth with and without the keccak256 LRU cache.

--- a/bin/reth/Cargo.toml
+++ b/bin/reth/Cargo.toml
@@ -64,6 +64,7 @@ reth-ress-provider.workspace = true
 
 # alloy
 alloy-rpc-types = { workspace = true, features = ["engine"] }
+alloy-primitives = { workspace = true, features = ["keccak-cache"] }
 
 # tracing
 tracing.workspace = true
@@ -101,6 +102,11 @@ asm-keccak = [
     "reth-primitives/asm-keccak",
     "reth-ethereum-cli/asm-keccak",
     "reth-node-ethereum/asm-keccak",
+]
+
+keccak-cache = [
+    "reth-ethereum-cli/keccak-cache",
+    "reth-node-ethereum/keccak-cache",
 ]
 
 jemalloc = [
