--- a/Cargo.toml
+++ b/Cargo.toml
@@ -739,6 +739,9 @@ vergen-git2 = "1.0.5"
 # networking
 ipnet = "2.11"
 
+[patch.crates-io]
+alloy-primitives = { path = "../alloy-core/crates/primitives" }
+
 # [patch.crates-io]
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
